[gd_scene load_steps=2 format=3 uid="uid://ueww00y4fg75"]

[ext_resource type="Script" path="res://check-channels.gd" id="1_4nktc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nktc")

[node name="InputScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ManualCSVTextEdit" type="TextEdit" parent="InputScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
scale = Vector2(1.00188, 0.998285)

[node name="ProcessCSVButton" type="Button" parent="InputScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -41.0
offset_right = 223.0
offset_bottom = -10.0
grow_vertical = 0
text = "Process Manual Text Input"

[node name="ImportCSVButton" type="Button" parent="InputScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -213.0
offset_top = -41.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Import Subscriptions CSV"

[node name="FileDialog" type="FileDialog" parent="InputScreen"]
mode = 2
title = "Open a File"
size = Vector2i(275, 159)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("subscriptions.csv")
use_native_dialog = true

[node name="LoadingScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingTextEdit" type="TextEdit" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00121, 0.997768)
text = "Loading..."
editable = false

[node name="LoadingProgressBar" type="ProgressBar" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -27.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0

[node name="OutputScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutputRichTextLabel" type="RichTextLabel" parent="OutputScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.997175)
bbcode_enabled = true

[node name="StartOverButton" type="Button" parent="OutputScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -31.0
offset_right = 44.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 1.00641)
text = "Start Over"
